--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ find_package(BZip2 REQUIRED)
 find_package(ZLIB REQUIRED)
 include_directories(SYSTEM protozero/include)
 include_directories(SYSTEM libosmium/include)
+include_directories(SYSTEM nlohmann)
 add_executable(osm-direction main.cpp)
 target_link_libraries(osm-direction ${EXPAT_LIBRARIES} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
